--- a/tex/appendix.tex
+++ b/tex/appendix.tex
@@ -16,6 +16,8 @@
 \subsection*{\sihao \hei A.1\quad 通过 GitHub 写论文}
 \label{A.1}
 
-若是了解GitHub，那么建议在 GitHub 上建立一个私人仓库，
-对论文进行版本控制。
-具体操作方式，请自行搜索。
+推荐使用 VS code 编辑和排版论文（安装 LaTeX Workshop
+插件），
+通过 SumatraPDF 快速浏览 PDF 文件，
+同时在 GitHub 上建立一个私人仓库进行版本控制。
+具体操作方式，请自行搜索，有时间我再补充。
