--- a/tex/chapter2.tex
+++ b/tex/chapter2.tex
@@ -14,7 +14,7 @@
 \subsection{\sihao \hei 宇宙学标准模型}
 \label{2.1}
 
-啊，只剩下一个月了，赶紧开始推导广义相对论~\cite{Einstein:1915ca, Einstein:1915by}。%引用文献
+以下介绍广义相对论~\cite{Einstein:1915ca, Einstein:1915by}~及其在宇宙学中的应用。%引用文献
 
 从爱因斯坦-希尔伯特作用量出发：
 % 行间公式
@@ -43,3 +43,10 @@ R_{\mu\nu}-\frac{1}{2}Rg_{\mu\nu}+\Lambda g_{\mu\nu}=8\pi GT_{\mu\nu}\,.
 \caption{能动量张量在宇宙早期随温度的演化。}% 图例
 \label{trace}
 \end{figure}
+
+其中，
+\begin{align}
+    \rho-3 p=\frac{g T^{4}}{2 \pi^{2}} \cdot x^{2} \int_{0}^{\infty} d y \frac{y^{2}}{\sqrt{x^{2}+y^{2}}} \frac{1}{\exp\left(\sqrt{x^{2}+y^{2}}\right) \pm 1}
+    \,. % 标点符号
+    \notag % 不添加序号
+\end{align}
