--- a/tex/conclusion.tex
+++ b/tex/conclusion.tex
@@ -6,7 +6,12 @@
 \setcounter{figure}{0}
 \setcounter{table}{0}
 \section*{\centerline {\hei \sanhao  第三章 \ \ \ \ 总结与展望}}
-\label{3}
+\label{conclusion}
 \vspace{0.5cm}
 
-啊，终于快写完了！
+待续：
+
+\begin{itemize}
+\item 修改页眉，使其支持所有类型的学位论文；
+\item 完善附录。
+\end{itemize}
