--- a/tex/toc.tex
+++ b/tex/toc.tex
@@ -14,7 +14,7 @@
 {\hei \xiaosihao 第二章\ \ \ \ \LaTeX 举例 \dotfill \pageref{2}}\\[0.2cm]
 \hspace*{0.5cm} \ \  \ 2.1\ \  宇宙学标准模型\dotfill \pageref{2.1}\\
 \hspace*{0.5cm} \ \  \ 2.2\ \  粒子物理标准模型\dotfill \pageref{2.2}\\[0.2cm]
-{\hei \xiaosihao 第三章\ \ \ \ 总结与展望 \dotfill \pageref{3}}\\[0.2cm]
+{\hei \xiaosihao 第三章\ \ \ \ 总结与展望 \dotfill \pageref{conclusion}}\\[0.2cm]
 {\hei \xiaosihao 附录A\ \ \ \ 附录A \dotfill \pageref{A}}\\
 \hspace*{0.5cm} \ \  \ A.1\ 通过 GitHub 写论文\dotfill \pageref{A.1}\\[0.2cm]
 {\hei \xiaosihao 参考文献 \dotfill \pageref{bib}}\\[0.2cm]
