--- a/tex/work.tex
+++ b/tex/work.tex
@@ -6,5 +6,5 @@
 \vspace{0.5cm}
 
 \begin{enumerate}
-\item 在这里列举已发表的文章。若是盲审的论文，则只需要说明在什么期刊发表了多少篇文章。
+\item 在这里列举已发表的文章。若是提交盲审的论文，则只需要说明在什么期刊发表了多少篇文章。
 \end{enumerate}
